  * chdist:
    + Add "use strict" and update for compliance.
    + Use Dpkg::Version to perform version comparisons.
  * Devscripts::Versort: Use Dpkg::Version::version_compare instead of
    invoking “dpkg --compare-versions”.

  [ Patrick Schoenfeld ]
  * nmudiff: Fix "[nmudiff] please include --tagpending option" by applying the
    patch from Gregor Herrmann. Thanks. (Closes: #559549)

 -- Patrick Schoenfeld <schoenfeld@debian.org>  Mon, 11 Jan 2010 11:47:42 +0100

devscripts (2.10.61) unstable; urgency=low

  * bts: Correct the address used to email the submitter when using the "bts
    done" command.

 -- James Vega <jamessan@debian.org>  Sat, 02 Jan 2010 22:20:19 -0500

devscripts (2.10.60) unstable; urgency=low

  The "Welcome to the New Year" release.

  [ James Vega ]
  * checkbashisms: Detect use of {x..z} expansion.  Thanks to Raphael
    Geissert.  (Closes: #560774)
  * who-uploads: Show usage if no arguments are given.  Thanks to Kumar
    Appaiah.  (Closes: #560955)
  * uscan:
    + Add missing escape of '\' in man page.  Thanks to Marco Túlio Gontijo
      for the patch.  (Closes: #562587)
    + Add missing verb in description of FTP syntax.  Thanks to Marco Túlio
      Gontijo for the patch.  (Closes: #562586)
  * annotate-output: Allow specifying a timestamp format.  (Closes: #539720)
  * bts:
    + Always include "thanks" at the end of the control block.  (Closes:
      #542962)
    + Allow specifying which fields will be shown by "bts status".  (Closes:
      #499283, #323782)
    + Add "verbose" option to "bts status", which will also show fields that
      don't have a set value.
    + Add "done" command which sends a close command as well as Ccing the bug
      submitter.  (Closes: #482751)
  * build-rdeps:
    + Add --origin option to specify which origin to use.
    + Use the Release file to determine which Sources file(s) to search for
      the given origin.  Thanks to Michael Schutte for the patch.  (Closes:
      #545115)
